# conformal-toolkit

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  ERRATA.md  README.md  docker-compose.yml  paper.bib  paper.md  pyproject.toml  sage-run.sh
.github/workflows/: test.yml
conformal_features/: __init__.py
conformal_features/benchmarks/: README.md  faust_correspondence.py  shapenet_classify.py  shrec_retrieval.py
conformal_features/discrete/: __init__.py  bach.py  conformal_factor.py  cross_ratios.py  curvature.py  mesh_utils.py  q_curvature.py  spectral.py  willmore.py
conformal_features/features/: __init__.py  pipeline.py
conformal_toolkit/: __init__.py
conformal_toolkit/carroll/: __init__.py  bms.py  carroll_connection.py  carroll_curvature.py  carroll_structure.py
conformal_toolkit/core/: __init__.py  bach.py  conformal_killing.py  conformal_structure.py  gjms.py  helpers.py  obstruction.py  q_curvature.py  schouten.py
conformal_toolkit/export/: __init__.py  feature_vector.py  to_numpy.py  to_torch.py
conformal_toolkit/hypersurface/: __init__.py  conformal_fundamental_form.py  extrinsic_gjms.py  extrinsic_q.py  invariant_enumeration.py  willmore.py
conformal_toolkit/poincare_einstein/: __init__.py  dirichlet_neumann.py  fefferman_graham.py  holographic_anomaly.py  renormalized_volume.py
conformal_toolkit/tractor/: __init__.py  standard_tractor.py  thomas_d.py  tractor_connection.py  tractor_curvature.py  tractor_metric.py
docs/: TOOLING_GAPS.md
docs/outreach/: blitz-email-draft.md  blitz-twitter-dm-draft.md
examples/: 01_willmore_and_curvature.ipynb  02_conformal_fundamental_forms.ipynb  03_tractor_calculus.ipynb  04_poincare_einstein.ipynb  05_bridge_symbolic_to_ml.ipynb  06_ml_shape_classification.ipynb
tests/: conftest_mesh.py  conftest_sage.py
tests/test_carroll/: test_carroll.py
tests/test_core/: test_bach.py  test_conformal_killing.py  test_fixtures.py  test_gjms.py  test_gjms_covariance.py  test_identities.py  test_obstruction.py  test_q_curvature.py  test_rescaling.py  test_schouten.py
tests/test_discrete/: test_bach.py  test_conformal_factor.py  test_cross_ratios.py  test_cross_ratios_mobius.py  test_curvature.py  test_errata_anchors.py  test_mesh_utils.py  test_q_curvature.py  test_spectral.py  test_willmore.py
tests/test_export/: test_export.py
tests/test_features/: test_benchmark_retrieval_smoke.py  test_benchmark_smoke.py  test_pipeline.py  test_pipeline_advanced.py
tests/test_hypersurface/: test_conformal_fundamental_form.py  test_extrinsic_gjms.py  test_extrinsic_q.py  test_invariant_enumeration.py  test_willmore.py
tests/test_pe/: test_critical_anchors.py  test_fefferman_graham.py  test_holographic.py
tests/test_tractor/: test_standard_tractor.py  test_thomas_d.py  test_tractor_connection.py  test_tractor_curvature.py  test_tractor_identities.py  test_tractor_metric.py
