[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conformal-toolkit"
version = "0.1.1"
description = "Computational conformal geometry and conformal invariants for geometric deep learning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Eric Rihm", email = "admin@strata-networks.com" }]
keywords = [
    "conformal-geometry", "differential-geometry", "tractor-calculus",
    "q-curvature", "gjms-operators", "willmore", "geometric-deep-learning",
    "sagemath", "pytorch", "mesh-features",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
ml = ["torch>=2.0", "scipy>=1.11", "robust-laplacian>=0.2"]
benchmarks = ["conformal-toolkit[ml]"]
dev = ["pytest>=7.0", "jupyter>=1.0"]

[project.urls]
Repository = "https://github.com/ericrihm/conformal-toolkit"
Issues = "https://github.com/ericrihm/conformal-toolkit/issues"
Changelog = "https://github.com/ericrihm/conformal-toolkit/blob/main/CHANGELOG.md"

[project.scripts]
conformal-shapenet = "conformal_features.benchmarks.shapenet_classify:main"
conformal-shrec = "conformal_features.benchmarks.shrec_retrieval:main"
conformal-faust = "conformal_features.benchmarks.faust_correspondence:main"

[tool.setuptools.packages.find]
include = ["conformal_toolkit*", "conformal_features*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
